@@ -1,3 +1,10 @@
+2013-03-28  Pedro Alves  <palves@redhat.com>
+
+	PR gdb/15294
+
+	* gdb.texinfo (List) <set listsize>: Adjust to document that
+	listsize 0 means no limit, and remove mention of -1.
+
 2013-03-11  Eli Zaretskii  <eliz@gnu.org>
 
 	* gdb.texinfo (General Query Packets): Don't use colon in index
